modify html file

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <title>Wellness Life - Be Fit</title>
     <link rel="stylesheet" href="./assets/css/fontawesome-free-6.7.2-web/css/fontawesome.css">
     <link rel="stylesheet" href="./assets/css/fontawesome-free-6.7.2-web/css/solid.css">
-    <link rel="stylesheet" href="/assets/css/style.css">
+    <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 
 <body>
